Fix: brands responsive on mobile and large screen

--- a/src/components/brand/Brand.module.css
+++ b/src/components/brand/Brand.module.css
@@ -9,7 +9,6 @@
 .brand{
     background-color: var(--primary-bg);
     width: 100%;
-    height: 70px;
     justify-content: center;
     align-items: center;
 }
@@ -17,15 +16,13 @@
 .content{
     display: flex;
     flex-wrap: wrap;
-    height: auto;
     justify-content: center;
-    position: relative;
 }
 .shoeImg{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    position: absolute;
+    justify-content: center;
 }
 .shoe{
     width: 40px;
